[tool.poetry]
name = "diversity"
version = "0.1.0"
description = "Evaluate the diversity of your team"
authors = ["Filipa Andrade <filipa.andrade@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
